# StudioSync-Core

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/studiosync_core/: urls.py
src/studiosync_core/auth/: apps.py  serializers.py  urls.py  views.py
src/studiosync_core/billing/: admin.py  apps.py  models.py  serializers.py  stripe_views.py  urls.py  views.py
src/studiosync_core/billing/migrations/: 0001_initial.py  0002_initial.py  0003_invoice_student_invoice_teacher_alter_invoice_band.py  0004_invoice_stripe_session_id.py  (+2 more)
src/studiosync_core/core/: __init__.py  admin.py  apps.py  email_backend.py  email_utils.py  file_cleanup.py  middleware.py  models.py  serializers.py  signals.py  storage.py  tasks.py  urls.py  validators.py
src/studiosync_core/inventory/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/studiosync_core/lessons/: __init__.py  admin.py  apps.py  calendar_utils.py  calendar_views.py  import_calendar_views.py  models.py  serializers.py  signals.py  urls.py  views.py
src/studiosync_core/messaging/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
src/studiosync_core/notifications/: __init__.py  admin.py  apps.py  consumers.py  models.py  serializers.py  signals.py  urls.py  views.py
src/studiosync_core/resources/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/studiosync_core/students/: apps.py  serializers.py  serializers_family.py  urls.py  views.py
src/studiosync_core/tests/: conftest.py
(+67 files in other folders)
